[gd_scene load_steps=9 format=3 uid="uid://dvlbbqj5vqmdr"]

[ext_resource type="Script" uid="uid://1bmkuci7h2pq" path="res://Enemy/bossowie/boss_2.gd" id="1_jo0hj"]
[ext_resource type="Texture2D" uid="uid://cqfm6kqok3pu" path="res://Art/boss2_fire_wall/pixil-frame-0 (78).png" id="3_h22ix"]
[ext_resource type="Texture2D" uid="uid://nemw34lak3wc" path="res://Art/boss2_fire_wall/frame1.png" id="3_itxqf"]
[ext_resource type="Texture2D" uid="uid://b0m6svogmio4" path="res://Art/boss2_fire_wall/Frame 2.png" id="4_hcmnd"]
[ext_resource type="Texture2D" uid="uid://cwl2x5xc5trte" path="res://Art/boss2_fire_wall/frame 3.png" id="5_278ow"]
[ext_resource type="Texture2D" uid="uid://cm547iyn5rtfa" path="res://Art/boss2_fire_wall/Å›miech.png" id="6_760w1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l580o"]
size = Vector2(277, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_myy88"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_itxqf")
}, {
"duration": 1.0,
"texture": ExtResource("4_hcmnd")
}, {
"duration": 1.0,
"texture": ExtResource("5_278ow")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_itxqf")
}, {
"duration": 1.0,
"texture": ExtResource("6_760w1")
}],
"loop": true,
"name": &"smiech",
"speed": 3.0
}]

[node name="Boss_2" type="Area2D" groups=["Boss"]]
script = ExtResource("1_jo0hj")

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
offset_left = -149.0
offset_top = -161.0
offset_right = 149.0
offset_bottom = -121.0
show_percentage = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.5, -31)
shape = SubResource("RectangleShape2D_l580o")

[node name="pierwszy_atak_node" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="pierwszy_atak_node"]
texture_filter = 1
rotation = -1.5708
scale = Vector2(6, 6)
texture = ExtResource("3_h22ix")

[node name="drugi_atak_node" type="Node2D" parent="."]

[node name="Pierwszy" type="Node2D" parent="drugi_atak_node"]
position = Vector2(1, 0)

[node name="drugi_atak_node2" type="Node2D" parent="."]

[node name="Drugi" type="Node2D" parent="drugi_atak_node2"]
position = Vector2(1, 0)

[node name="drugi_atak_node3" type="Node2D" parent="."]

[node name="Trzeci" type="Node2D" parent="drugi_atak_node3"]
position = Vector2(1, 0)

[node name="drugi_atak_node4" type="Node2D" parent="."]

[node name="Czwarty" type="Node2D" parent="drugi_atak_node4"]
position = Vector2(1, 0)

[node name="Bullet_Spawn" type="Node2D" parent="."]
rotation = 0.0174533

[node name="Rotating_Bullet_Spawner" type="Node2D" parent="Bullet_Spawn"]
position = Vector2(20.9968, -0.366499)

[node name="Atak_Timer" type="Timer" parent="."]
one_shot = true

[node name="Lasting_Timer" type="Timer" parent="."]
one_shot = true

[node name="Cooldown_Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(4, -44)
scale = Vector2(8.715, 8.715)
sprite_frames = SubResource("SpriteFrames_myy88")
animation = &"smiech"
frame = 1
frame_progress = 0.584165

[connection signal="timeout" from="Atak_Timer" to="." method="_on_atak_timer_timeout"]
[connection signal="timeout" from="Lasting_Timer" to="." method="_on_lasting_timer_timeout"]
[connection signal="timeout" from="Cooldown_Timer" to="." method="_on_cooldown_timer_timeout"]
